#133 Initial Critical Time Calculation Implementation
Commit Squash
CriticalTime Calculation implementation done. Tests added in API, Common and Launcher
Minor problems fixed (doxygen, methods's names, references and const...) + optimize the critical time algorithm following advices from Florentine
Fix with rebase.
Fix unittests.
Fix unittests 2.

Signed-off-by: Erwann GOASGUEN <erwann.goasguen_externe@rte-france.com>

--- a/sources/Common/CMakeLists.txt
+++ b/sources/Common/CMakeLists.txt
@@ -52,6 +52,7 @@ set(DYN_ALGO_COMMON_SOURCES
   DYNSimulationResult.cpp
   DYNLoadIncreaseResult.cpp
   DYNMultiProcessingContext.cpp
+  DYNCriticalTimeCalculation.cpp
   ${CPP_KEYS}
   )
 
@@ -62,6 +63,7 @@ set(DYN_ALGO_COMMON_HEADERS
   DYNSimulationResult.h
   DYNLoadIncreaseResult.h
   DYNMultiProcessingContext.h
+  DYNCriticalTimeCalculation.h
   ${INCLUDE_KEYS}
   )
 
