--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     env:
       DYNAWO_BUILD_TYPE: Debug
       DYNAWO_CXX11_ENABLED: YES
-      DYNAWO_COMPILER: GCC
       DYNAWO_RESULTS_SHOW: "false"
+      DYNAWO_FORCE_CXX11_ABI: "true"
       DYNAWO_NB_PROCESSORS_USED: 2
       DYNAWO_VERSION: 1.3.0
       GH_API_DYNAWO: ${{ github.api_url }}/repos/${{ github.repository_owner }}/dynawo
@@ -44,7 +44,7 @@ jobs:
     env:
       DYNAWO_BUILD_TYPE: Debug
       DYNAWO_CXX11_ENABLED: YES
-      DYNAWO_COMPILER: GCC
+      DYNAWO_FORCE_CXX11_ABI: "true"
       DYNAWO_RESULTS_SHOW: "false"
       DYNAWO_NB_PROCESSORS_USED: 2
       DYNAWO_VERSION: 1.3.0
