#171 Update vsconfig to add deploy task.

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ gitversion_algorithms.h*
 ### vscode ###
 .vscode/*
 !.vscode/settings.json
-# !.vscode/tasks.json
+!.vscode/tasks.json
 !.vscode/launch.json
 # !.vscode/extensions.json
 *.code-workspace
