#109 download gperftool as 3rd party and automatically use tcmalloc in case of multi-threading closes #109

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ gitversion_algorithms.h*
 # End of https://www.toptal.com/developers/gitignore/api/vscode
 
 myEnvDynawoAlgorithms.sh
+3rdParty/gperftools/gperftools-*.tar.gz
