#176 add a nrt to avoid regressions

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ platforms/DBCreation/DBCreation.log
 distributions/
 .gitignore_local
 *.orig
-deploy/*
+deploy
 
 sources/config_algorithms.h
 gitversion_algorithms.h*
