#114 Fix MPI find_package to find system one.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
 
       - name: Build
         run: |
+          source /etc/profile.d/00-modulepath.sh
+          source /etc/profile.d/modules.sh
+          source /usr/share/lmod/lmod/init/bash
+          module load mpi/mpich-x86_64
           export DYNAWO_HOME=$(pwd)/dynawo
           export DYNAWO_ALGORITHMS_HOME=$(pwd)
           util/envDynawoAlgorithms.sh build
@@ -89,6 +93,10 @@ jobs:
         env:
           CONTAINER_WORKSPACE: ${{ runner.workspace }}
         run: |
+          source /etc/profile.d/00-modulepath.sh
+          source /etc/profile.d/modules.sh
+          source /usr/share/lmod/lmod/init/bash
+          module load mpi/mpich-x86_64
           export DYNAWO_HOME=$(pwd)/dynawo
           export DYNAWO_ALGORITHMS_HOME=$(pwd)
           $CONTAINER_WORKSPACE/build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw-output util/envDynawoAlgorithms.sh build-tests-coverage
