#220 Adapt nightly release workflow to publish nightly of release branch.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Fetch Dynawo
         run: |
           source .github/workflows/tools.sh
-          download_asset $GH_API_DYNAWO nightly Dynawo_headers_V${DYNAWO_VERSION}.zip $GITHUB_TOKEN
+          download_asset $GH_API_DYNAWO nightly-release Dynawo_headers_V${DYNAWO_VERSION}.zip $GITHUB_TOKEN
 
       - name: Unzip Dynawo
         run: |
@@ -83,7 +83,7 @@ jobs:
       - name: Fetch Dynawo
         run: |
           source .github/workflows/tools.sh
-          download_asset $GH_API_DYNAWO nightly Dynawo_omc_V${DYNAWO_VERSION}.zip $GITHUB_TOKEN
+          download_asset $GH_API_DYNAWO nightly-release Dynawo_omc_V${DYNAWO_VERSION}.zip $GITHUB_TOKEN
 
       - name: Unzip Dynawo
         run: |
