#171 Update vscode config.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch DynawoAlgorithms",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build-code/Install/dynawo-algorithms/bin/dynawoAlgorithms",
+            "program": "${workspaceFolder}/build-code/install/dynawo-algorithms/bin/dynawoAlgorithms",
             "args": [ "--simulationType", "MC", "--input", "fic_MULTIPLE.xml", "--output", "output.zip", "--directory", "${workspaceFolder}/nrt/data/MC/files" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -16,13 +16,12 @@
                 { "name": "DYNAWO_ALGORITHMS_LOCALE", "value" : "en_GB" },
                 { "name": "DYNAWO_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
                 { "name": "DYNAWO_DDB_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/ddb" },
-                { "name": "DYNAWO_RESOURCES_DIR", "value" : "${workspaceFolder}/build-code/Install/dynawo-algorithms/share:${workspaceFolder}/../dynawo/build-code/deploy/share:${workspaceFolder}/build-code/Install/dynawo-algorithms/share/xsd:${workspaceFolder}/../dynawo/build-code/deploy/share/xsd" },
+                { "name": "DYNAWO_RESOURCES_DIR", "value" : "${workspaceFolder}/build-code/install/dynawo-algorithms/share:${workspaceFolder}/../dynawo/build-code/deploy/share:${workspaceFolder}/build-code/install/dynawo-algorithms/share/xsd:${workspaceFolder}/../dynawo/build-code/deploy/share/xsd" },
                 { "name": "DYNAWO_DICTIONARIES", "value" : "dictionaries_mapping" },
                 { "name": "DYNAWO_USE_XSD_VALIDATION", "value" : "false" },
-                { "name": "DYNAWO_IIDM_EXTENSION", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/lib/libdynawo_DataInterfaceIIDMExtension.so" },
                 { "name": "DYNAWO_LIBIIDM_EXTENSIONS", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/lib" },
                 { "name": "IIDM_XML_XSD_PATH", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/share/iidm/xsd/" },
-                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/Install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
             ],
             "externalConsole": false,
             "MIMode": "gdb",
