--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,20 +7,31 @@
         "files.trimTrailingWhitespace": false
     },
 
+    // uncomment this to compile 3rd parties
+    // "cmake.sourceDirectory": "${workspaceFolder}/3rdParty",
+    // "cmake.buildDirectory": "${workspaceFolder}/build-code/3rdParty/build",
+
+    // uncomment this to compile dynamo after installing 3rd parties
     "cmake.sourceDirectory": "${workspaceFolder}",
     "cmake.buildDirectory": "${workspaceFolder}/build-code/dynawo-algorithms",
 
     "cmake.configureSettings": {
         "DYNAWO_HOME": "${workspaceFolder}/../dynawo/build-code/deploy",
         "DYNAWO_ALGORITHMS_HOME": "${workspaceFolder}",
+        "DYNAWO_ALGORITHMS_THIRD_PARTY_DIR": "${workspaceFolder}/build-code/install/3rdParty",
 
-        "CMAKE_INSTALL_PREFIX": "${workspaceFolder}/build-code/Install/dynawo-algorithms",
+        // To compile 3rd parties
+        // "CMAKE_INSTALL_PREFIX": "${workspaceFolder}/build-code/install/3rdParty",
 
-        "CXX11_ENABLED": "ON",
+        // To compile dynamo after installing 3rd parties
+        "CMAKE_INSTALL_PREFIX": "${workspaceFolder}/build-code/install/dynawo-algorithms",
+
         "FORCE_CXX11_ABI": "OFF",
         "BUILD_TESTS": "ON",
         "BUILD_TESTS_COVERAGE": "OFF",
-        "BOOST_ROOT_DEFAULT": "true"
+        "BOOST_ROOT_DEFAULT": "true",
+        "TMP_DIR": "${workspaceFolder}/build-code/3rdParty/tmp",
+        "DOWNLOAD_DIR": "${workspaceFolder}/build-code/3rdParty/src"
     },
 
     "files.exclude": {
@@ -30,6 +41,9 @@
     "files.watcherExclude": {
         "**/.git/objects/**": true,
         "**/.git/subtree-cache/**": true,
-        "build-code": true
+        "build-code": true,
+        "build": true,
+        "install": true,
+        "deploy": true
     }
 }
