--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build-code/install/dynawo-algorithms/bin/dynawoAlgorithms",
-            "args": [ "--simulationType", "MC", "--input", "fic_MULTIPLE.xml", "--output", "output.zip", "--directory", "${workspaceFolder}/nrt/data/MC/files" ],
+            "args": [ "--simulationType", "MC", "--input", "fic_MULTIPLE.xml", "--output", "output.zip", "--directory", "${workspaceFolder}/nrt/data/IEEE14/MC/files" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [
@@ -37,6 +37,123 @@
                     "ignoreFailures": true
                 }
             ]
-        }
+        },
+        {
+            "name": "(gdb) Launch unittest: MultipleJobs",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-code/dynawo-algorithms/sources/API/multipleJobs/test/dynawo_algorithms_API_MultipleJobs_unittest",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build-code/dynawo-algorithms/sources/API/multipleJobs/test",
+            "environment": [
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Launch unittest: AggregatedResults",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-code/dynawo-algorithms/sources/API/aggregatedResults/test/dynawo_algorithms_API_AggregatedResults_unittest",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build-code/dynawo-algorithms/sources/API/aggregatedResults/test",
+            "environment": [
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Launch unittest: Common",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-code/dynawo-algorithms/sources/Common/test/dynawo_algorithms_Common_unittest",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build-code/dynawo-algorithms/sources/Common/test",
+            "environment": [
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Launch unittest: Launcher",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-code/dynawo-algorithms/sources/Launcher/test/dynawo_algorithms_Launcher_unittest",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build-code/dynawo-algorithms/sources/Launcher/test",
+            "environment": [
+                { "name": "DYNAWO_RESOURCES_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/share/" },
+                { "name": "DYNAWO_ALGORITHMS_LOCALE", "value" : "en_GB" },
+                { "name": "DYNAWO_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_SCRIPTS_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/sbin" },
+                { "name": "DYNAWO_DICTIONARIES", "value" : "dictionaries_mapping" },
+                { "name": "DYNAWO_ADEPT_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_INSTALL_OPENMODELICA", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/OpenModelica" },
+                { "name": "DYNAWO_XERCESC_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_SUITESPARSE_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_SUNDIALS_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_BOOST_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_LIBXML_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_NICSLU_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
     ]
 }
