--- a/sources/Launcher/test/CMakeLists.txt
+++ b/sources/Launcher/test/CMakeLists.txt
@@ -35,7 +35,21 @@ add_custom_target(${MODULE_NAME}-pre-tests
   )
 
 add_custom_target(${MODULE_NAME}-tests
-  COMMAND ${CMAKE_COMMAND} -E env "${runtime_tests_PATH}" $<TARGET_FILE:${MODULE_NAME}>
+  COMMAND ${CMAKE_COMMAND} -E env "${runtime_tests_PATH}" "${runtime_PATH}"
+    "DYNAWO_RESOURCES_DIR=${DYNAWO_HOME}/share"
+    "DYNAWO_ALGORITHMS_LOCALE=en_GB"
+    "DYNAWO_INSTALL_DIR=${DYNAWO_HOME}"
+    "DYNAWO_SCRIPTS_DIR=${DYNAWO_HOME}/sbin"
+    "DYNAWO_DICTIONARIES=dictionaries_mapping"
+    "DYNAWO_ADEPT_INSTALL_DIR=${DYNAWO_HOME}"
+    "DYNAWO_INSTALL_OPENMODELICA=${DYNAWO_HOME}/OpenModelica"
+    "DYNAWO_XERCESC_INSTALL_DIR=${DYNAWO_HOME}"
+    "DYNAWO_SUITESPARSE_INSTALL_DIR=${DYNAWO_HOME}"
+    "DYNAWO_SUNDIALS_INSTALL_DIR=${DYNAWO_HOME}"
+    "DYNAWO_BOOST_HOME=${DYNAWO_HOME}"
+    "DYNAWO_LIBXML_HOME=${DYNAWO_HOME}"
+    "DYNAWO_NICSLU_INSTALL_DIR=${DYNAWO_HOME}"
+    $<TARGET_FILE:${MODULE_NAME}>
   DEPENDS
     ${MODULE_NAME}-pre-tests
     ${MODULE_NAME}
