--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -17,9 +17,11 @@ jobs:
       DYNAWO_BUILD_TYPE: Release
       DYNAWO_FORCE_CXX11_ABI: "true"
       DYNAWO_NB_PROCESSORS_USED: 2
+      DYNAWO_VERSION: 1.4.0
       GH_API: ${{ github.api_url }}/repos/${{ github.repository }}
       GH_API_DYNAWO: ${{ github.api_url }}/repos/${{ github.repository_owner }}/dynawo
-      CURL_JSON: 'curl --silent --header "Content-Type": "application/json"'
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      CURL_JSON: 'curl --silent -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" --header "Content-Type: application/json"'
 
     steps:
       - name: Checkout
@@ -28,10 +30,7 @@ jobs:
       - name: Fetch Dynawo
         run: |
           source .github/workflows/tools.sh
-
-          # TODO(Luma) avoid knowing the exact version in advance
-          # Download the file with asset name "Dynawo_headers_V*.zip"
-          download_asset $GH_API_DYNAWO nightly Dynawo_headers_V1.4.0.zip
+          download_asset $GH_API_DYNAWO nightly Dynawo_headers_V${DYNAWO_VERSION}.zip $GITHUB_TOKEN
 
       - name: Unzip Dynawo
         run: |
@@ -65,9 +64,9 @@ jobs:
             curl \
               --request DELETE \
               --url "$GH_API/releases/$RELEASE_ID" \
-              --header "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
+              --header "Authorization: token $GITHUB_TOKEN"
             echo "Wait for release to be deleted ..."
-            wait_for_http_code "$GH_API/releases/$RELEASE_ID" 404
+            wait_for_http_code "$GH_API/releases/$RELEASE_ID" 404 $GITHUB_TOKEN
           else
             echo "Previous nightly release not found"
           fi
@@ -83,11 +82,11 @@ jobs:
           curl \
             --request DELETE \
             --url "$GH_API/git/refs/tags/nightly" \
-            --header "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Authorization: token $GITHUB_TOKEN" \
             --header "Content-Type: application/json"
 
           echo "Wait for tag to be deleted ..."
-          wait_for_http_code "$GH_API/git/refs/tags/nightly" 404
+          wait_for_http_code "$GH_API/git/refs/tags/nightly" 404 $GITHUB_TOKEN
 
       - name: INFO. Nightly tag should not be found
         run: $CURL_JSON "$GH_API/git/refs/tags/nightly"
@@ -112,14 +111,14 @@ jobs:
           curl \
             --request POST \
             --url "$GH_API/git/refs" \
-            --header "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Authorization: token $GITHUB_TOKEN" \
             --header "Content-Type: application/json" \
             --data '{
                 "ref": "refs/tags/nightly",
                 "sha": "'$MASTER_COMMIT_ID'"
                 }'
           echo "Wait for tag to be created ..."
-          wait_for_http_code "$GH_API/git/refs/tags/nightly" 200
+          wait_for_http_code "$GH_API/git/refs/tags/nightly" 200 $GITHUB_TOKEN
 
       - name: INFO. Tag nightly created"
         run: $CURL_JSON "$GH_API/git/refs/tags/nightly"
@@ -131,7 +130,7 @@ jobs:
           curl \
             --request POST \
             --url "$GH_API/releases" \
-            --header "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Authorization: token $GITHUB_TOKEN" \
             --header "Content-Type: application/json" \
             --data '{
                 "tag_name" : "nightly",
@@ -142,7 +141,7 @@ jobs:
                 "prerelease" : true
                 }'
           echo "Wait for the release to be published ..."
-          wait_for_http_code "$GH_API/releases/tags/nightly" 200
+          wait_for_http_code "$GH_API/releases/tags/nightly" 200 $GITHUB_TOKEN
 
       - name: INFO. Release object created for tag nightly"
         run: $CURL_JSON "$GH_API/releases/tags/nightly"
